<resources>
    <string name="app_name">Calculadora</string>

    <!-- Teclado Numerico -->
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="zero">0</string>

    <!-- Operadores Matematicos -->
    <string name="divisao">/</string>
    <string name="multi">x</string>
    <string name="subt">-</string>
    <string name="soma">+</string>
    <string name="porcento">%</string>

    <string name="maisMenos">+/-</string>
    <string name="ponto">.</string>
    <string name="igual">=</string>
    <string name="limpar">C</string>

</resources>
